--- a/src/main/resources/application.json
+++ b/src/main/resources/application.json
@@ -1,7 +1,7 @@
 {
   "server": {
     "port": 8080,
-    "host": "localhost"
+    "host": "0.0.0.0"
   },
   "database": {
     "url": "jdbc:h2:mem:airline_booking;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE",
